file
find_argument.c:100:8: error: unused variable 're' [-Werror,-Wunused-variable]
        char    *re;
                 ^
find_argument.c:97:66: error: unused parameter 'envp' [-Werror,-Wunused-parameter]
char    *find_argument(char *s, t_node *head, t_source *src, char **envp)
                                                                    ^
2 errors generated.
find_command.c:69:65: error: unused parameter 'envp' [-Werror,-Wunused-parameter]
char    *find_command(char *s, t_node *head, t_source *src, char **envp)
                                                                   ^
1 error generated.
main.c:44:31: error: unused parameter 'src' [-Werror,-Wunused-parameter]
void    ms_free_inside(t_source *src, t_var *var)
                                 ^
main.c:67:7: error: unused variable 'count' [-Werror,-Wunused-variable]
        int             count;
                        ^
main.c:68:8: error: unused variable 'ret' [-Werror,-Wunused-variable]
        char    *ret;
                 ^
main.c:87:14: error: unused parameter 'argc' [-Werror,-Wunused-parameter]
int     main(int argc, char **argv, char **envp)
                 ^
main.c:87:27: error: unused parameter 'argv' [-Werror,-Wunused-parameter]
int     main(int argc, char **argv, char **envp)
                              ^
5 errors generated.
main_three.c:21:8: error: unused variable 'c_tmp' [-Werror,-Wunused-variable]
        char    *c_tmp;
                 ^
main_three.c:50:8: error: unused variable 's' [-Werror,-Wunused-variable]
        char    *s;
                 ^
main_three.c:45:40: error: unused parameter 'src' [-Werror,-Wunused-parameter]
char    *get_x_env(char **envp, t_source *src, char *envv_name)
                                          ^
3 errors generated.
main_four.c:3:24: error: unused parameter 'src' [-Werror,-Wunused-parameter]
void    ms_free(t_source *src, t_var *var)
                          ^
1 error generated.
parse.c:51:7: error: unused variable 'count' [-Werror,-Wunused-variable]
        int             count;
                        ^
parse.c:48:38: error: unused parameter 'envp' [-Werror,-Wunused-parameter]
void    loop_pipe(t_source *src, char **envp, t_node *head, char **pipe)
                                        ^
parse.c:98:10: error: unused variable 'p' [-Werror,-Wunused-variable]
        t_pipe  *p;
                 ^
parse.c:97:9: error: unused variable 'arg' [-Werror,-Wunused-variable]
        char    **arg;
                  ^
4 errors generated.
parse_three.c:15:51: error: unused parameter 'src' [-Werror,-Wunused-parameter]
void    init_arg(t_node *head, char **arg, t_source *src, int tmp2)
                                                     ^
1 error generated.
sigs.c:3:18: error: unused parameter 'c' [-Werror,-Wunused-parameter]
void    handler(int c)
                    ^
1 error generated.
test3.c:66:12: error: comparison of integers of different signs: 'int' and 'unsigned long' [-Werror,-Wsign-compare]
                while (i < (strlen(g_global.ret) - 1))
                       ~ ^  ~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
fork_pipes.c:69:6: error: unused variable 'ret' [-Werror,-Wunused-variable]
        int     ret;
                ^
1 error generated.
count_starts.c:23:38: error: variable 'tmp' is uninitialized when used here [-Werror,-Wuninitialized]
                count_start_option(s, src, &start, tmp);
                                                   ^~~
count_starts.c:13:11: note: initialize the variable 'tmp' to silence this warning
        char    *tmp;
                    ^
                     = NULL
count_starts.c:37:43: error: unused parameter 'src' [-Werror,-Wunused-parameter]
void    count_start_three(char *s, t_source *src, int *start, int *file_found)
                                             ^
2 errors generated.
find_red.c:95:61: error: unused parameter 'head' [-Werror,-Wunused-parameter]
int     find_file_name(int **i, char *s, t_source *src, t_node *head)
                                                                ^
1 error generated.
count_argument.c:47:33: error: unused parameter 'offset' [-Werror,-Wunused-parameter]
int     count_argument(char *s, int offset, t_source *src)
                                    ^
1 error generated.
execute.c:3:49: error: unused parameter 'args' [-Werror,-Wunused-parameter]
char    *get_path(t_source *src, char *cmd, char **args, char **varg)
                                                   ^
execute.c:54:11: error: unused variable 's' [-Werror,-Wunused-variable]
        char                    **s;
                                  ^
execute.c:56:14: error: unused variable 'i' [-Werror,-Wunused-variable]
        static int              i;
                                ^
execute.c:52:62: error: unused parameter 'envp' [-Werror,-Wunused-parameter]
int     ft_execute(char *cmd, char **args, t_source *src, char **envp)
                                                                 ^
4 errors generated.
execute_utils.c:30:44: error: unused parameter 'src' [-Werror,-Wunused-parameter]
char    **get_env_path(char **envp, t_source *src)
                                              ^
execute_utils.c:42:8: error: variable 'paths' is used uninitialized whenever 'if' condition is false
      [-Werror,-Wsometimes-uninitialized]
                        if (s != 0)
                            ^~~~~~
execute_utils.c:44:12: note: uninitialized use occurs here
                        return (paths);
                                ^~~~~
execute_utils.c:42:4: note: remove the 'if' if its condition is always true
                        if (s != 0)
                        ^~~~~~~~~~~
execute_utils.c:34:14: note: initialize the variable 'paths' to silence this warning
        char    **paths;
                       ^
                        = NULL
2 errors generated.
exit.c:23:36: error: unused parameter 'src' [-Werror,-Wunused-parameter]
int     ft_exit(char **args, t_source *src)
                                       ^
exit.c:47:20: error: variable 'ret' is uninitialized when used here [-Werror,-Wuninitialized]
        ft_exit_two(args, ret);
                          ^~~
exit.c:26:9: note: initialize the variable 'ret' to silence this warning
        int     ret;
                   ^
                    = 0
2 errors generated.
export_one.c:3:52: error: unused parameter 'our_envp' [-Werror,-Wunused-parameter]
void    ft_expn_add(char *add, t_source *src, char **our_envp, char **args)
                                                     ^
export_one.c:28:25: error: variable 'tmp2' is uninitialized when used here [-Werror,-Wuninitialized]
                ft_expn_add_two(tmp1, tmp2, 2, 0);
                                      ^~~~
export_one.c:7:13: note: initialize the variable 'tmp2' to silence this warning
        char    **tmp2;
                      ^
                       = NULL
export_one.c:32:56: error: unused parameter 'args' [-Werror,-Wunused-parameter]
void    ft_expn_chng_two(char *add, t_source *src, char **args, char **envp)
                                                          ^
export_one.c:84:53: error: unused parameter 'envp' [-Werror,-Wunused-parameter]
void    ft_set_enxp(char **args, t_source *src, char **envp)
                                                       ^
4 errors generated.
export_four.c:14:25: error: unused parameter 'envp' [-Werror,-Wunused-parameter]
void    replace_env(char **envp, t_source *src, char *value)
                           ^
1 error generated.
find_command_two.c:3:45: error: unused parameter 'envp' [-Werror,-Wunused-parameter]
char    *get_env_value_cmd_two(char *s, char **envp, t_source *src, int i)
                                               ^
1 error generated.
gnl/get_next_line_utils.c:24:12: error: comparison of integers of different signs: 'unsigned int' and 'int'
      [-Werror,-Wsign-compare]
        if (start > ft_strlen(s))
            ~~~~~ ^ ~~~~~~~~~~~~
gnl/get_next_line_utils.c:97:12: error: comparison of integers of different signs: 'unsigned int' and 'int'
      [-Werror,-Wsign-compare]
        if (start > ft_strlen(s))
            ~~~~~ ^ ~~~~~~~~~~~~
2 errors generated.
libft/ft_split_normal.c:26:15: error: unused function 'ft_free' [-Werror,-Wunused-function]
static  char    **ft_free(char **p, int j)
                  ^
1 error generated.
libft/ft_strtrim.c:90:16: error: comparison of integers of different signs: 'size_t' (aka 'unsigned long') and 'int'
      [-Werror,-Wsign-compare]
        if ((size_t)k != ft_strlen(s1))
            ~~~~~~~~~ ^  ~~~~~~~~~~~~~